// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`wonder-blocks-timing example 1 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-label=""
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "MozOsxFontSmoothing": "inherit",
          "WebkitFontSmoothing": "inherit",
          "background": "transparent",
          "border": "none",
          "boxSizing": "border-box",
          "color": "inherit",
          "font": "inherit",
          "lineHeight": "normal",
          "margin": 0,
          "outline": "none",
          "overflow": "visible",
          "padding": 0,
          "textDecoration": "none",
          "touchAction": "manipulation",
          "userSelect": "none",
          "width": "auto",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        className=""
        style={
          Object {
            ":focus": Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            },
            "alignItems": "center",
            "background": "#1865f2",
            "border": "none",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "color": "#ffffff",
            "cursor": "pointer",
            "display": "inline-flex",
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "outline": "none",
            "padding": 0,
            "paddingBottom": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 0,
            "position": "relative",
            "textDecoration": "none",
            "touchAction": "manipulation",
            "userSelect": "none",
            "width": "100%",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "alignItems": "center",
              "display": "flex",
              "fontFamily": "Lato, sans-serif",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": "20px",
              "overflow": "hidden",
              "pointerEvents": "none",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "width": "100%",
                "zIndex": 0,
              }
            }
          >
            Unmount
          </div>
        </span>
      </div>
    </button>
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      NaughtyComponent here
    </div>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      id="uid--0-wb-id"
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;

exports[`wonder-blocks-timing example 2 1`] = `
<div
  className=""
  style={
    Object {
      "alignItems": "stretch",
      "borderStyle": "solid",
      "borderWidth": 0,
      "boxSizing": "border-box",
      "display": "flex",
      "flexDirection": "column",
      "margin": 0,
      "minHeight": 0,
      "minWidth": 0,
      "padding": 0,
      "position": "relative",
      "zIndex": 0,
    }
  }
>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <button
      aria-label=""
      className=""
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragStart={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      role="button"
      style={
        Object {
          "::MozFocusInner": Object {
            "border": 0,
          },
          "MozOsxFontSmoothing": "inherit",
          "WebkitFontSmoothing": "inherit",
          "background": "transparent",
          "border": "none",
          "boxSizing": "border-box",
          "color": "inherit",
          "font": "inherit",
          "lineHeight": "normal",
          "margin": 0,
          "outline": "none",
          "overflow": "visible",
          "padding": 0,
          "textDecoration": "none",
          "touchAction": "manipulation",
          "userSelect": "none",
          "width": "auto",
        }
      }
      tabIndex={0}
      type="button"
    >
      <div
        className=""
        style={
          Object {
            ":focus": Object {
              "WebkitTapHighlightColor": "rgba(0,0,0,0)",
            },
            "alignItems": "center",
            "background": "#1865f2",
            "border": "none",
            "borderRadius": 4,
            "borderStyle": "solid",
            "borderWidth": 0,
            "boxSizing": "border-box",
            "color": "#ffffff",
            "cursor": "pointer",
            "display": "inline-flex",
            "flexDirection": "column",
            "height": 40,
            "justifyContent": "center",
            "margin": 0,
            "minHeight": 0,
            "minWidth": 0,
            "outline": "none",
            "padding": 0,
            "paddingBottom": 0,
            "paddingLeft": 16,
            "paddingRight": 16,
            "paddingTop": 0,
            "position": "relative",
            "textDecoration": "none",
            "touchAction": "manipulation",
            "userSelect": "none",
            "width": "100%",
            "zIndex": 0,
          }
        }
      >
        <span
          className=""
          style={
            Object {
              "MozOsxFontSmoothing": "grayscale",
              "WebkitFontSmoothing": "antialiased",
              "alignItems": "center",
              "display": "flex",
              "fontFamily": "Lato, sans-serif",
              "fontSize": 16,
              "fontWeight": "bold",
              "lineHeight": "20px",
              "overflow": "hidden",
              "pointerEvents": "none",
              "textOverflow": "ellipsis",
              "whiteSpace": "nowrap",
              "width": "100%",
            }
          }
        >
          <div
            className=""
            style={
              Object {
                "alignItems": "stretch",
                "borderStyle": "solid",
                "borderWidth": 0,
                "boxSizing": "border-box",
                "display": "flex",
                "flexDirection": "column",
                "margin": 0,
                "minHeight": 0,
                "minWidth": 0,
                "padding": 0,
                "position": "relative",
                "width": "100%",
                "zIndex": 0,
              }
            }
          >
            Unmount
          </div>
        </span>
      </div>
    </button>
    <div
      className=""
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      GoodComponent here
    </div>
  </div>
  <div
    className=""
    style={
      Object {
        "alignItems": "stretch",
        "borderStyle": "solid",
        "borderWidth": 0,
        "boxSizing": "border-box",
        "display": "flex",
        "flexDirection": "column",
        "margin": 0,
        "minHeight": 0,
        "minWidth": 0,
        "padding": 0,
        "position": "relative",
        "zIndex": 0,
      }
    }
  >
    <div
      className=""
      id="uid--1-wb-id"
      style={
        Object {
          "alignItems": "stretch",
          "borderStyle": "solid",
          "borderWidth": 0,
          "boxSizing": "border-box",
          "display": "flex",
          "flexDirection": "column",
          "margin": 0,
          "minHeight": 0,
          "minWidth": 0,
          "padding": 0,
          "position": "relative",
          "zIndex": 0,
        }
      }
    />
  </div>
</div>
`;
